[tool.poetry]
name = "agentic_demo"
version = "0.1.0"
description = ""
authors = ["ricsi98 <98kissricsi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.43.0"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
langchain-openai = "^0.1.23"
langchain-core = "^0.2.38"
langchain-experimental = "^0.0.65"
langgraph = "^0.2.26"
html2text = "^2024.2.26"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
